<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="locationViewData"
            type="pl.mikolajlen.whereami.location.LocationViewData" />

        <import type="pl.mikolajlen.whereami.utils.AddressFormatter" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="pl.mikolajlen.whereami.mainActivity.MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/title"
            style="@style/label_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{locationViewData.title}"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/your_current_location_is" />

        <TextView
            android:id="@+id/location_text"
            style="@style/main_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{String.format(@string/location_format, locationViewData.location.getLatitude(), locationViewData.location.getLongitude())}"
            android:visibility="@{!locationViewData.locationError}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/exampled_location" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/label_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/your_most_possible_address_is"
            android:visibility="@{!locationViewData.addressesError}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_text" />

        <TextView
            android:id="@+id/main_address"
            style="@style/main_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:minLines="3"
            android:text="@{AddressFormatter.getFormattedAddress(locationViewData.mainAddress)}"
            android:visibility="@{!locationViewData.addressesError}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            tools:text="67 Bridge St\n Westminster\nLondon SW1A 2PW" />

        <TextView
            android:id="@+id/addressess_subtitle"
            style="@style/hint_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/other_possible_adresses"
            android:visibility="@{!locationViewData.addressesError}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_address" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@{locationViewData.errorMessage}"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:visibility="@{locationViewData.addressesError || locationViewData.locationError}"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressess_subtitle"
            tools:text="@string/location_fetch_error" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:adapter="@{locationViewData.addressesListAdapter}"
            app:itemDecoration="@{locationViewData.decoration}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_message" />

    </android.support.constraint.ConstraintLayout>
</layout>